--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
+        classpath "com.meituan.android.walle:plugin:$walleVersion"
+        classpath "com.tencent.mm:AndResGuard-gradle-plugin:$andResGuardVersion"
 
 
     }
