--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -6,11 +6,18 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
 
 
-
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.esp.patrol.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_provider_path" />
+        </provider>
 
 
 
