--- a/common/build.gradle
+++ b/common/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     /*rx*/
     api "io.reactivex.rxjava2:rxkotlin:$rx_kotlin"
     api "io.reactivex.rxjava2:rxandroid:$rx_android"
+
+    /*AutoDispose*/
     api "com.uber.autodispose:autodispose-kotlin:$autodispose_version"
     api "com.uber.autodispose:autodispose-android-archcomponents-kotlin:$autodispose_version"
 
