--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         targetSdkVersion target_sdk_version
         versionCode version_code
         versionName version_name
+        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -25,9 +26,6 @@ android {
 }
 
 
-kapt {
-    generateStubs = true
-}
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
