--- a/common/build.gradle
+++ b/common/build.gradle
@@ -49,11 +49,6 @@ allOpen {
 }
 
 
-kapt {
-    generateStubs = true
-}
-
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -99,10 +94,12 @@ dependencies {
     api "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
 
     /*glide*/
+
     api("com.github.bumptech.glide:glide:$glide") {
-        exclude group: 'com.android.support'
+        exclude group: "com.android.support"
     }
     kapt "com.github.bumptech.glide:compiler:$glide"
+
 
     api "com.github.chrisbanes:PhotoView:$photoview"
     api "com.blankj:utilcode:$utilcode"
