--- a/config.gradle
+++ b/config.gradle
@@ -42,6 +42,6 @@ ext{
     arouter_annotation = "1.0.4"
     walleVersion = "1.1.6"
     andResGuardVersion="1.2.13"
-    rx_imgpicker="2.1.1"
+    rx_imgpicker="2.2.0-alpha"
 
 }
