--- a/common/build.gradle
+++ b/common/build.gradle
@@ -55,11 +55,11 @@ dependencies {
     api "com.android.support:appcompat-v7:$android_support"
     api "com.android.support:design:$android_support"
     api "com.android.support:support-vector-drawable:$android_support"
+    api "com.android.support.constraint:constraint-layout:$constraint_version"
+
 
     /*dagger2*/
     api "com.google.dagger:dagger:$dagger2"
-
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     kapt "com.google.dagger:dagger-compiler:$dagger2"
 
     /*rx*/
@@ -83,7 +83,7 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
-    /*rximagepicker*/
+    /*RxImagepicker*/
     api "com.github.qingmei2:rximagepicker:$rx_imgpicker"
 
     /*retrofit*/
