--- a/config.gradle
+++ b/config.gradle
@@ -2,16 +2,16 @@ ext {
     kotlin_version = '1.2.71'
 
     /*defaultConfig*/
-    compile_sdk_version = 27
+    compile_sdk_version = 28
     min_sdk_version = 16
-    target_sdk_version = 27
+    target_sdk_version = 26
     version_code = 1  //eg:1->0.0.1  10->0.1.0  100->1.0.0
     version_name = "0.0.1"
     multiDexEnabled = true
-    constraint_version = "1.1.2"
+    constraint_version = "1.1.3"
 
     /*dependencies*/
-    android_support = "27.1.1"
+    android_support = "28.0.0"
     eventbus = "3.1.1"
     glide = "4.7.1"
     permission = "2.0.0-rc11"
@@ -33,13 +33,13 @@ ext {
     photoview = "2.1.3"
     objectboxVersion = "2.1.0"
     bga_badgeview = "1.1.8"
-    utilcode = "1.20.0"
+    utilcode = "1.20.3"
     arouter_api = "1.3.1"
     arouter_compiler = "1.1.4"
     arouter_register = "1.0.2"
     arouter_annotation = "1.0.4"
     walleVersion = "1.1.6"
     andResGuardVersion = "1.2.13"
-    rx_imgpicker = "2.2.0-alpha"
+    rx_imgpicker = "2.2.0"
 
 }
