--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,9 +7,8 @@ apply plugin: 'kotlin-allopen'
 
 kapt {
     arguments {
-        arg("moduleName", project.getName())
+        arg("AROUTER_MODULE_NAME", project.getName())
     }
-
 }
 
 android {
@@ -69,6 +68,10 @@ dependencies {
     api "com.uber.autodispose:autodispose-kotlin:$autodispose_version"
     api "com.uber.autodispose:autodispose-android-archcomponents-kotlin:$autodispose_version"
 
+
+//    api "com.uber.autodispose:autodispose-android-archcomponents:$autodispose_version"
+//    api "com.uber.autodispose:autodispose-ktx:$autodispose_version"
+//    api "com.uber.autodispose:autodispose-android-archcomponents-ktx:$autodispose_version"
     /*eventbus*/
     api "org.greenrobot:eventbus:$eventbus"
 
