--- a/common/build.gradle
+++ b/common/build.gradle
@@ -49,12 +49,14 @@ allOpen {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api "com.android.support:appcompat-v7:$android_support"
     api "com.android.support:design:$android_support"
     api "com.android.support:support-vector-drawable:$android_support"
     api "com.android.support.constraint:constraint-layout:$constraint_version"
+    api "com.android.support:support-v4:$android_support"
+    api "com.android.support:support-annotations:$android_support"
 
     /*dagger2*/
     api "com.google.dagger:dagger:$dagger2"
@@ -68,15 +70,12 @@ dependencies {
     api "com.uber.autodispose:autodispose-kotlin:$autodispose_version"
     api "com.uber.autodispose:autodispose-android-archcomponents-kotlin:$autodispose_version"
 
-
-//    api "com.uber.autodispose:autodispose-android-archcomponents:$autodispose_version"
-//    api "com.uber.autodispose:autodispose-ktx:$autodispose_version"
-//    api "com.uber.autodispose:autodispose-android-archcomponents-ktx:$autodispose_version"
     /*eventbus*/
     api "org.greenrobot:eventbus:$eventbus"
 
     /*permission*/
     api "com.yanzhenjie:permission:$permission"
+
     /*Gson*/
     api "com.google.code.gson:gson:$gson"
 
@@ -94,27 +93,20 @@ dependencies {
     api "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
 
     /*glide*/
-
     api "com.github.bumptech.glide:glide:$glide"
     kapt "com.github.bumptech.glide:compiler:$glide"
-
-
     api "com.github.chrisbanes:PhotoView:$photoview"
     api "com.blankj:utilcode:$utilcode"
 
     /*ARouter*/
     api "com.alibaba:arouter-api:$arouter_api"
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
-
     api "com.ashokvarma.android:bottom-navigation-bar:$bottom_navigation_bar"
     api "com.github.CymChad:BaseRecyclerViewAdapterHelper:$baseRecyclerViewAdapterHelper"
-
-
-
     api "cn.bingoogolapple:bga-badgeview-api:$bga_badgeview"
     kapt "cn.bingoogolapple:bga-badgeview-compiler:$bga_badgeview"
-
     api "me.jessyan:progressmanager:$progressmanager_version"
+    implementation project(':datepicker')
 }
 
 
