--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,19 @@ android {
 }
 
 
-dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    kapt "com.google.dagger:dagger-compiler:$dagger2"
-    implementation project(':common')
-
+kapt {
+    arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
 }
 
 
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    kapt "com.google.dagger:dagger-compiler:$dagger2"
+    kapt "com.alibaba:arouter-compiler:$arouter_compiler"
+    implementation project(':common')
+
+}
