--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.DateTimeActivity"></activity>
+        <activity android:name=".ui.DateTimeActivity" />
+        <activity android:name=".ui.ZxingActivity"></activity>
     </application>
 
 </manifest>
