1.新增对SharePreference的扩展，使用更加方便 2.新增登录示例，主要演示如果使用SharePreference的扩展

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.DateTimeActivity" />
-        <activity android:name=".ui.ZxingActivity"></activity>
+        <activity android:name=".ui.ZxingActivity" />
+        <activity android:name=".ui.LoginActivity"></activity>
     </application>
 
 </manifest>
