1.新增高德3D地图的SDK 2.完善高德地图SDK相关混淆配置

--- a/gao_de_map/build.gradle
+++ b/gao_de_map/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger2"
     implementation project(':common')
 
-    api 'com.amap.api:location:4.3.0'
+    api 'com.amap.api:location:4.4.0'
+    api 'com.amap.api:3dmap:6.5.0'
 
 }
