--- a/common/build.gradle
+++ b/common/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api "com.android.support:appcompat-v7:$android_support"
+    api "com.android.support:support-v4:$android_support"
     api "com.android.support:design:$android_support"
     api "com.android.support:support-vector-drawable:$android_support"
     api "com.android.support.constraint:constraint-layout:$constraint_version"
