--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -5,10 +5,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:theme="@style/AppTheme"
-        android:largeHeap="true"
+    <application
         android:hardwareAccelerated="false"
-        >
+        android:largeHeap="true"
+        android:theme="@style/AppTheme">
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -20,7 +20,10 @@
                 android:resource="@xml/file_provider_path" />
         </provider>
 
-        <activity android:name=".ui.ImgPreviewActivity"></activity>
+        <activity
+            android:name=".ui.ImgPreviewActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
