--- a/custom_view/build.gradle
+++ b/custom_view/build.gradle
@@ -29,5 +29,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "com.android.support:appcompat-v7:$android_support"
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
 }
