--- a/config.gradle
+++ b/config.gradle
@@ -8,10 +8,18 @@ ext {
     version_code = 1  //eg:1->0.0.1  10->0.1.0  100->1.0.0
     version_name = "0.0.1"
     multiDexEnabled = true
-    constraint_version = "1.1.3"
 
     /*dependencies*/
-    android_support = "28.0.0"
+
+    /*AndroidX*/
+    appcompat="1.1.0-alpha01"
+    legacy_support_v4="1.0.0"
+    material="1.1.0-alpha02"
+    vectordrawable="1.1.0-alpha01"
+    constraintlayout="2.0.0-alpha3"
+    annotation="1.0.1"
+
+    /*third party*/
     eventbus = "3.1.1"
     glide = "4.8.0"
     permission = "2.0.0-rc12"
@@ -21,7 +29,7 @@ ext {
     rx_android = "2.1.0"
     rx_java = "2.2.4"
     rx_kotlin = "2.3.0"
-    autodispose_version = "0.8.0"
+    autodispose_version = "1.1.0"
     dagger2 = "2.20"
     bottom_navigation_bar = "2.0.5"
     gson = "2.8.5"
@@ -29,14 +37,14 @@ ext {
     baseRecyclerViewAdapterHelper = "2.9.44"
     jpush = "3.1.1"
     jcore = "1.1.9"
-    photoview = "2.1.3"
+    photoview = "2.2.0"
     objectboxVersion = "2.2.0"
-    bga_badgeview = "1.1.8"
     utilcode = "1.22.7"
     arouter_api = "1.4.1"
     arouter_compiler = "1.2.2"
     walleVersion = "1.1.6"
     andResGuardVersion = "1.2.15"
     rx_imgpicker = "2.2.0"
+    datepickerVersion="1.2.2"
 
 }
