任务页面新增侧滑菜单示例

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,7 @@ dependencies {
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
     implementation project(':common')
     implementation 'com.github.yuzhiqiang1993:zxing:2.2.5'
-
-
+    implementation project(':custom_view')
 }
 
 
