--- a/config.gradle
+++ b/config.gradle
@@ -45,6 +45,8 @@ ext {
     walleVersion = "1.1.6"
     andResGuardVersion = "1.2.15"
     rx_imgpicker = "2.4.1"
+    bugly_crashreport_upgrade = '1.3.5'
+    bugly_nativecrashreport = '3.6.0'
     datepickerVersion = "1.2.2"
 
     signConfigs = [
