--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,11 +57,14 @@ kapt {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     kapt "com.google.dagger:dagger-compiler:$dagger2"
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
     implementation project(':common')
     implementation 'com.github.yuzhiqiang1993:zxing:2.2.5'
     implementation project(':custom_view')
+    implementation project(':gao_de_map')
 }
 
 
