--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.yzq.kotlincommon">
 
+
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
+
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -13,6 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ui.GaoDeActivity"></activity>
         <activity
             android:name=".ui.NewsActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -51,7 +60,7 @@
             android:name=".ui.AutodisposeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.DropDownMenuActivity"></activity>
+        <activity android:name=".ui.DropDownMenuActivity" />
     </application>
 
 </manifest>
