--- a/config.gradle
+++ b/config.gradle
@@ -26,20 +26,20 @@ ext {
     retrofit = "2.5.0"
     progressmanager_version = "1.5.0"
     ok_http = "3.12.1"
-    rx_android = "2.1.0"
+    rx_android = "2.1.1"
     rx_java = "2.2.4"
     rx_kotlin = "2.3.0"
     autodispose_version = "1.1.0"
     dagger2 = "2.20"
-    bottom_navigation_bar = "2.0.5"
+    bottom_navigation_bar = "2.1.0"
     gson = "2.8.5"
-    material_dialogs = "0.9.6.0"
-    baseRecyclerViewAdapterHelper = "2.9.45-androidx"
+    material_dialogs = "2.0.0"
+    baseRecyclerViewAdapterHelper = "2.9.46"
     jpush = "3.1.1"
     jcore = "1.1.9"
     photoview = "2.3.0"
     objectboxVersion = "2.2.0"
-    utilcode = "1.23.2"
+    utilcode = "1.23.4"
     arouter_api = "1.4.1"
     arouter_compiler = "1.2.2"
     walleVersion = "1.1.6"
@@ -48,7 +48,7 @@ ext {
     bugly_crashreport_upgrade = '1.3.5'
     bugly_nativecrashreport = '3.6.0'
     datepickerVersion = "1.2.2"
-
+    flexbox="1.1.0"
     signConfigs = [
             storeFilePath: "kotlinCommon.jks",
             storePwd     : "123456",
