--- a/config.gradle
+++ b/config.gradle
@@ -22,7 +22,7 @@ ext {
     /*third party*/
     eventbus = "3.1.1"
     glide = "4.9.0"
-    permission = "2.0.0-rc12"
+    permission = "2.0.0"
     retrofit = "2.5.0"
     progressmanager_version = "1.5.0"
     ok_http = "3.12.1"
