更新AndPermission版本，适配AndroidX

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -67,8 +67,7 @@ dependencies {
     api "org.greenrobot:eventbus:$eventbus"
 
     /*permission*/
-    api "com.yanzhenjie:permission:$permission"
-
+    api "com.yanzhenjie.permission:x:$permission"
     /*Gson*/
     api "com.google.code.gson:gson:$gson"
 
