--- a/config.gradle
+++ b/config.gradle
@@ -18,6 +18,7 @@ ext {
     vectordrawable = "1.0.0"
     constraintlayout = "1.1.3"
     annotation = "1.0.1"
+    multiDexVersion="2.0.1"
 
     /*third party*/
     eventbus = "3.1.1"
@@ -49,6 +50,7 @@ ext {
     bugly_nativecrashreport = '3.6.0'
     datepickerVersion = "1.2.2"
     flexbox = "1.1.0"
+    hotfix="3.2.8"
     signConfigs = [
             storeFilePath: "kotlinCommon.jks",
             storePwd     : "123456",
