引入dokka插件，用于生成api文档

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'org.jetbrains.dokka-android'
 
 kapt {
     arguments {
@@ -114,3 +115,4 @@ dependencies {
     api "com.aliyun.ams:alicloud-android-hotfix:$hotfix"
 
 }
+
