--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         classpath "com.meituan.android.walle:plugin:$walleVersion"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         classpath "com.tencent.mm:AndResGuard-gradle-plugin:$andResGuardVersion"
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:${dokka_version}"
 
     }
 
@@ -37,3 +38,4 @@ allprojects {
 
     }
 }
+
