更新Dialog版本，将其修改为object类

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     /*dialog*/
     api "com.afollestad.material-dialogs:core:$material_dialogs"
     api "com.afollestad.material-dialogs:input:$material_dialogs"
+    api "com.afollestad.material-dialogs:lifecycle:$material_dialogs"
+
     /*RxImagepicker*/
     api "com.github.qingmei2:rximagepicker:$rx_imgpicker"
 
