Zxing中新增扫描营业执照二维码（仅限于上海）获取营业执照信息的例子

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
     buildTypes {
 
 
-        debug{
+        debug {
 
 //            minifyEnabled true
 //            zipAlignEnabled true
@@ -71,7 +71,8 @@ dependencies {
 
 
     implementation project(':common')
-    implementation 'com.github.yuzhiqiang1993:zxing:2.2.5'
+    implementation 'com.github.yuzhiqiang1993:zxing:2.2.6'
+    implementation 'org.jsoup:jsoup:1.11.3'
     implementation project(':custom_view')
     implementation project(':gao_de_map')
 }
