--- a/common/build.gradle
+++ b/common/build.gradle
@@ -92,8 +92,10 @@ dependencies {
     /*glide*/
     api "com.github.bumptech.glide:glide:$glide"
     kapt "com.github.bumptech.glide:compiler:$glide"
+    /*photoView*/
     api "com.github.chrisbanes:PhotoView:$photoview"
-    api "com.blankj:utilcode:$utilcode"
+    /*utils*/
+    api "com.blankj:utilcodex:$utilcode"
 
     /*ARouter*/
     api "com.alibaba:arouter-api:$arouter_api"
