--- a/config.gradle
+++ b/config.gradle
@@ -28,13 +28,13 @@ ext {
     progressmanager_version = "1.5.0"
     ok_http = "3.12.1"
     rx_android = "2.1.1"
-    rx_java = "2.2.8"
+//    rx_java = "2.2.8"
     rx_kotlin = "2.3.0"
     autodispose_version = "1.2.0"
     dagger2 = "2.22.1"
     bottom_navigation_bar = "2.1.0"
     gson = "2.8.5"
-    material_dialogs = "2.7.0"
+    material_dialogs = "2.8.1"
     baseRecyclerViewAdapterHelper = "2.9.46"
     photoview = "2.3.0"
     objectboxVersion = "2.3.4"
@@ -42,7 +42,7 @@ ext {
     arouter_api = "1.4.1"
     arouter_compiler = "1.2.2"
     walleVersion = "1.1.6"
-    andResGuardVersion = "1.2.15"
+    andResGuardVersion = "1.2.16"
     rx_imgpicker = "2.4.2"
     bugly_crashreport_upgrade = '1.3.8'
     bugly_nativecrashreport = '3.6.0'
