--- a/common/build.gradle
+++ b/common/build.gradle
@@ -88,6 +88,9 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$ok_http"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
+    /*kotlin协程*/
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
 
     /*glide*/
     api "com.github.bumptech.glide:glide:$glide"
@@ -117,6 +120,7 @@ dependencies {
 
     /*阿里热修复*/
     api "com.aliyun.ams:alicloud-android-hotfix:$hotfix"
+
 
 }
 
