接入LeakCanary，目前暂未发现内存泄漏的问题

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -120,6 +120,8 @@ dependencies {
 
     /*阿里热修复*/
     api "com.aliyun.ams:alicloud-android-hotfix:$hotfix"
+    /*leak canary*/
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-alpha-1'
 
 
 }
