--- a/common/build.gradle
+++ b/common/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
     /*kotlin协程*/
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    /*协程Android库，提供了ui调度*/
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
 
     /*glide*/
