--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,8 +65,6 @@ kapt {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt "com.google.dagger:dagger-compiler:$dagger2"
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
 
@@ -75,7 +73,12 @@ dependencies {
     implementation 'com.github.yuzhiqiang1993:zxing:2.2.8'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation project(':custom_view')
-    implementation project(':gao_de_map')
+
+
+    if (isModule.toBoolean()) {
+        implementation project(':gao_de_map')
+    }
+
 }
 
 
@@ -117,7 +120,6 @@ andResGuard {
         artifact = "com.tencent.mm:SevenZip:$andResGuardVersion"
     }
 }
-
 
 
 afterEvaluate {
