--- a/gao_de_map/src/main/module/AndroidManifest.xml
+++ b/gao_de_map/src/main/module/AndroidManifest.xml
@@ -25,12 +25,15 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- 3.2.0版本增加 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
-
-    <application tools:ignore="GoogleAppIndexingWarning,MissingApplicationIcon">
+    <application
+        android:name="com.yzq.common.BaseApp"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        tools:ignore="GoogleAppIndexingWarning">
         <!-- 设置key -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="e99ade7b3c9ef8fb363bfdcdd89f771d" /> <!-- 定位需要的服务 -->
+            android:value="ad999cf4bfaca05559349a8e753370c2" /> <!-- 定位需要的服务 -->
         <service android:name="com.amap.api.location.APSService" />
 
         <activity
