--- a/gao_de_map/src/main/AndroidManifest.xml
+++ b/gao_de_map/src/main/AndroidManifest.xml
@@ -26,7 +26,11 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
 
-    <application tools:ignore="GoogleAppIndexingWarning,MissingApplicationIcon">
+    <application
+        android:name="com.yzq.common.BaseApp"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        tools:ignore="GoogleAppIndexingWarning">
         <!-- 设置key -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
