--- a/gao_de_map/src/main/module/AndroidManifest.xml
+++ b/gao_de_map/src/main/module/AndroidManifest.xml
@@ -25,11 +25,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- 3.2.0版本增加 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
-    <application
-        android:name="com.yzq.common.BaseApp"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        tools:ignore="GoogleAppIndexingWarning">
+    <application tools:ignore="GoogleAppIndexingWarning">
         <!-- 设置key -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
@@ -39,16 +35,7 @@
         <activity
             android:name=".ui.GaoDeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:screenOrientation="portrait">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-
-        </activity>
+            android:screenOrientation="portrait" />
 
     </application>
 
