--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         classpath "com.tencent.mm:AndResGuard-gradle-plugin:$andResGuardVersion"
         classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:${dokka_version}"
-
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.21.0"
     }
 
 
