新增在线检测依赖库是否新版本的插件，执行gradlew dependencyUpdates即可

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'walle'
 apply plugin: 'AndResGuard'
-
+apply plugin: "com.github.ben-manes.versions"
 android {
     compileSdkVersion compile_sdk_version
     defaultConfig {
