--- a/gao_de_map/build.gradle
+++ b/gao_de_map/build.gradle
@@ -7,7 +7,7 @@ if (isModule.toBoolean()) {
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-
+apply plugin: "com.github.ben-manes.versions"
 
 android {
     compileSdkVersion compile_sdk_version
