--- a/custom_view/build.gradle
+++ b/custom_view/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-
+apply plugin: "com.github.ben-manes.versions"
 
 android {
     compileSdkVersion compile_sdk_version
